data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef signed int int32_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
struct HdfSListNode {
    struct HdfSListNode *next;
};
struct HdfDeviceInfo {
    struct HdfSListNode node;
    _Bool isDynamic;
    uint16_t status;
    uint16_t deviceType;
    uint32_t deviceId;
    uint16_t policy;
    uint16_t priority;
    uint16_t preload;
    uint16_t permission;
    const char *moduleName;
    const char *svcName;
    const char *deviceMatchAttr;
    const char *deviceName;
};
struct HdfObject {
    int32_t objectId;
};
typedef uint32_t devid_t;
struct HdfSBuf;
struct IDevHostService {
    struct HdfObject object;
    int (*AddDevice)(struct IDevHostService *hostService, const struct HdfDeviceInfo *devInfo);
    int (*DelDevice)(struct IDevHostService *hostService, devid_t devId);
    int (*StartService)(struct IDevHostService *hostService);
    int (*PmNotify)(struct IDevHostService *service, uint32_t powerState);
    int (*Dump)(struct IDevHostService *hostService, struct HdfSBuf *data, struct HdfSBuf *reply);
};
struct HdfSBuf;
struct IDevHostService *DevHostServiceNewInstance(uint16_t hostId, const char *hostName);
void DevHostServiceFreeInstance(struct IDevHostService *service);
struct HdfObject *HdfObjectManagerGetObject(int objectId);
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));