data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/manager__c248934e0221/.c2r_bindgen_extern/hdf_driver_installer_9356ad75.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfObject {
    pub objectId: i32,
}
pub type devid_t = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSListNode {
    pub next: *mut HdfSListNode,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceInfo {
    pub node: HdfSListNode,
    pub isDynamic: bool,
    pub status: u16,
    pub deviceType: u16,
    pub deviceId: u32,
    pub policy: u16,
    pub priority: u16,
    pub preload: u16,
    pub permission: u16,
    pub moduleName: *const ::core::ffi::c_char,
    pub svcName: *const ::core::ffi::c_char,
    pub deviceMatchAttr: *const ::core::ffi::c_char,
    pub deviceName: *const ::core::ffi::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IDevHostService {
    pub object: HdfObject,
    pub AddDevice: ::core::option::Option<
        unsafe extern "C" fn(
            hostService: *mut IDevHostService,
            devInfo: *const HdfDeviceInfo,
        ) -> ::core::ffi::c_int,
    >,
    pub DelDevice: ::core::option::Option<
        unsafe extern "C" fn(
            hostService: *mut IDevHostService,
            devId: devid_t,
        ) -> ::core::ffi::c_int,
    >,
    pub StartService: ::core::option::Option<
        unsafe extern "C" fn(hostService: *mut IDevHostService) -> ::core::ffi::c_int,
    >,
    pub PmNotify: ::core::option::Option<
        unsafe extern "C" fn(service: *mut IDevHostService, powerState: u32) -> ::core::ffi::c_int,
    >,
    pub Dump: ::core::option::Option<
        unsafe extern "C" fn(
            hostService: *mut IDevHostService,
            data: *mut HdfSBuf,
            reply: *mut HdfSBuf,
        ) -> ::core::ffi::c_int,
    >,
}
unsafe extern "C" {
    pub fn DevHostServiceNewInstance(
        hostId: u16,
        hostName: *const ::core::ffi::c_char,
    ) -> *mut IDevHostService;
}
unsafe extern "C" {
    pub fn DevHostServiceFreeInstance(service: *mut IDevHostService);
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_APP: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_KMSG: LogType = 4;
pub const LOG_ONLY_PRERELEASE: LogType = 5;
pub const LOG_TYPE_MAX: LogType = 6;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_LEVEL_MIN: LogLevel = 0;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub const LOG_LEVEL_MAX: LogLevel = 8;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfObjectManagerGetObject(objectId: ::core::ffi::c_int) -> *mut HdfObject;
}
